--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,7 +70,7 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 20px 0px;
   border-top: 1px solid #0f1113;
   justify-content: center;
   align-items: center;
